# socks5-proxy-SUM-2022-copy

./: .$uml.drawio.bkp  .$uml.drawio.dtmp  .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.old  CMakeLists2.txt  Makefile  README.md  compile.bat  compile_windows  config.txt  configure  install  install.bat  installer.nsi  proxy_common.h  proxy_test.cpp  server.cpp  server.h  tcp_connection.cpp  tcp_connection.h  test_summary.docx  ui_uml.drawio  uml.drawio  Тестирование.docx
installer/: installer.nsi  socks5-interface.desktop
installer/arch/: PKGBUILD
installer/arch-manual/: PKGBUILD  socks5-proxy.install
installer/arch-scripted/: PKGBUILD  socks5-proxy.install
service/linux/: install  socks5-proxy.service
service/windows/: .clangd  Makefile  ServiceBase.h  debug.h  main.cpp  service.cpp  service.h  servicecontrols.c
src/: CMakeLists.txt  ConfigReader.cpp  ConfigReader.h  LogConfigReader.cpp  LogConfigReader.h  Logger.cpp  Logger.h  config.txt  main.cpp  proxy_common.h  proxy_exceptions.h  proxy_test.cpp  server.cpp  server.h  session.cpp  session.h  sock5.cpp  sock5_impl.cpp  socks.cpp  socks.h  socks4.cpp  socks4.h  socks5.cpp  socks5.h  socks5_impl.h  statWriter.cpp  statWriter.h  stat_db_service.cpp  stat_db_service.h  stat_handlers.cpp  stat_handlers.h  string_utils.h  tcp_connection.cpp  tcp_connection.h
src/mylog/: LogUtil.h
ui/: DBService.h  main.cpp  main.qml  main.qrc  session.cpp  session.h  sessionmodel.cpp  sessionmodel.h  sortfiltersessionmodel.cpp  sortfiltersessionmodel.h  tablemodel.cpp  tablemodel.h  ui.pro
ui/resources/content/: CalendarSpoiler.qml  DatePicker.qml  FiltersBar.qml  SessionTableView.qml  SortableColumnHeading.qml  TimerBar.qml
ui/resources/main/: main.qml
